# aml-improved-shape-completion

./: README.md
aml/: 1_a_train.lua  1_b_train.lua  4_run.lua
aml/config/: bathtub.high.json  bathtub.low.json  bathtub.medium.json  chair.high.json  chair.low.json  chair.medium.json  clean.high.json  clean.low.json  clean.medium.json  desk.high.json  desk.low.json  desk.medium.json  kitti.high.json  kitti.low.json  kitti.medium.json  noisy.high.json  noisy.low.json  noisy.medium.json  table.high.json  table.low.json  table.medium.json
dai/: 0_model.lua  1_train.lua  3_sanity_check.py  4_run.lua
dai/config/: bathtub.high.json  bathtub.low.json  bathtub.medium.json  chair.high.json  chair.low.json  chair.medium.json  clean.high.json  clean.low.json  clean.medium.json  desk.high.json  desk.low.json  desk.medium.json  kitti.high.json  kitti.low.json  kitti.medium.json  noisy.high.json  noisy.low.json  noisy.medium.json  table.high.json  table.low.json  table.medium.json
data/: README.md
data/modelnet/: 10_1_convert_binvox.py  11_1_check.py  11_2_check_depth.py  11_3_check_observations.py  11_4_check_sdf.py  1_scale.py  (+32 more)
icp/: CMakeLists.txt  icp.cpp  sample.cpp
icp/cmake/: FindEigen3.cmake
icp/icp/: icp.cpp
icp/test/off/: 0.off  10.off  15.off  20.off  25.off  5.off
icp/test/ply/: 0.ply  10.ply  15.ply  20.ply  25.ply  5.ply
icp/test/txt/: 0.txt  10.txt  15.txt  20.txt  25.txt  5.txt
sup/: 0_generate_codes.py  1_train.lua  2_a_marching_cubes.py  2_b_test.py  4_run.lua
vae/: 1_train.lua  2_a_marching_cubes.py  2_b_test.py  3_sanity_check.py  4_run.lua
(+251 files in other folders)
